[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
rand = "0.8.0"
regex = "1.4.2"
scan_fmt = "0.2.5"
permutohedron = "0.2.4"
num = "0.3.1"
